--- a/client/src/index.css
+++ b/client/src/index.css
@@ -79,4 +79,8 @@
       @apply bg-background text-foreground;
       font-feature-settings: "rlig" 1, "calt" 1;
     }
+
+    .routes-container > div {
+      @apply flex flex-col flex-grow h-full;
+    }
   }
