Redesigned (duhh...) student

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -90,4 +90,25 @@
   .card {
     @apply bg-white rounded-2xl p-4 w-1/3 shadow-md;
   }
+  .card .form-header{
+    @apply flex justify-center flex-col items-center;
+  }
+  .card .form-header .form-title {
+    @apply text-3xl font-semibold p-2 uppercase text-blue-800;
+  }
+  .card .form-header .form-desc {
+    @apply text-gray-400 p-2;
+  }
+  .alert {
+    @apply w-full flex justify-center;
+  }
+  .form-control {
+    @apply w-full flex flex-col justify-start p-2 items-start relative;
+  }
+  .alert-success {
+    @apply bg-green-200 rounded-2xl w-1/2 md:w-2/3 p-2 text-center my-2 text-green-800 font-bold;
+  }
+  .alert-error {
+    @apply bg-red-200 rounded-2xl w-1/2 md:w-2/3 p-2 text-center my-2 text-red-800 font-bold;
+  }
 }
