--- a/client/src/components/Loader/Loader.css
+++ b/client/src/components/Loader/Loader.css
@@ -1,10 +1,12 @@
 .Loader {
     width: 100%;
     height: 100%;
+    top: 0;
+    left: 0;
     position: absolute;
     /*background: #000000aa;*/
     background: rgba(0, 0, 0, .7);
-    z-index: 999;
+    z-index: 980;
     display: flex;
     flex-direction: column;
     justify-content: center;
