--- a/client/src/index.css
+++ b/client/src/index.css
@@ -81,16 +81,20 @@
   }
 
   .routes-container > div {
-    @apply flex flex-col flex-grow h-full;
+    @apply flex flex-col flex-grow h-full overflow-y-scroll bg-slate-100 m-0 lg:mx-5 lg:mb-5 rounded-none lg:rounded-2xl overflow-hidden;
+  }
+
+  .navbar {
+    @apply pb-5
   }
 }
 
 
 @layer components {
   .card {
-    @apply bg-white rounded-2xl p-4 w-1/3 shadow-md;
+    @apply bg-white rounded-2xl p-4 w-full md:w-2/3 m-3 md:m-2 lg:w-3/5 xl:w-2/5 shadow-md;
   }
-  .card .form-header{
+  .card .form-header {
     @apply flex justify-center flex-col items-center;
   }
   .card .form-header .form-title {
