--- a/client/src/index.css
+++ b/client/src/index.css
@@ -92,7 +92,7 @@
 
 @layer components {
   .card {
-    @apply bg-white rounded-2xl p-4 w-full md:w-2/3 m-3 md:m-2 lg:w-3/5 xl:w-2/5 shadow-md;
+    @apply bg-white rounded-none md:rounded-2xl p-4 w-full md:w-2/3 m-3 md:m-2 lg:w-3/5 xl:w-2/5 shadow-md;
   }
   .card .form-header {
     @apply flex justify-center flex-col items-center;
